Added datails presenter class to paysheet data

--- a/templates/paysheet/__paysheet_accrued_support.html.twig
+++ b/templates/paysheet/__paysheet_accrued_support.html.twig
@@ -1,7 +1,7 @@
 {% trans_default_domain 'paysheet' %}
 <div class="card-header d-flex">
     <h4 class="card-header-title">
-        <i class="fas fa-user"></i> Devengados: Auxilio
+        <i class="fas fa-user"></i> Devengados: Auxilios (n)
     </h4>
     <div class="toolbar ml-auto">
         <button class="btn btn-sm btn-link" type="button" data-toggle="collapse" data-target="#accruedSupportData" aria-expanded="true" aria-controls="accruedSupportData">
