--- a/templates/paysheet/__paysheet_accrued_basic.html.twig
+++ b/templates/paysheet/__paysheet_accrued_basic.html.twig
@@ -12,12 +12,17 @@
 
 <div id="accruedBasicData" class="collapse show card-body">
     <div class="form-row">
-        <div class="form-group col-6">
+        <div class="form-group col-4">
+            <label for="accrued[basic][0][paidAt]">Fecha de Pago</label>
+            <input name="accrued[basic][0][paidAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" required value="{{ paysheet.details.accrued.basic.0.paidAt|default('') ? paysheet.details.accrued.basic.0.paidAt|date('Y-m-d', app.user.timezone) : '' }}" />
+        </div>
+
+        <div class="form-group col-4">
             <label for="accrued[basic][0][days]">Días Trabajados</label>
             <input name="accrued[basic][0][days]" class="form-control" type="text" required value="{{ paysheet.details.accrued.basic.0.days|default('') }}" />
         </div>
 
-        <div class="form-group col-6">
+        <div class="form-group col-4">
             <label for="accrued[basic][0][amount]">Sueldo Trabajado</label>
             <div class="input-group">
                 <div class="input-group-prepend">
