--- a/templates/paysheet/__paysheet_accrued_vacation.html.twig
+++ b/templates/paysheet/__paysheet_accrued_vacation.html.twig
@@ -37,4 +37,24 @@
             </div>
         </div>
     </div>
+
+    <div class="form-row">
+        <div class="form-group col-6">
+        </div>
+
+        <div class="form-group col-3">
+            <label for="accrued[vacation][0][compensateDays]">Días Inactivo</label>
+            <input name="accrued[vacation][0][compensateDays]" class="form-control" type="text" value="{{ paysheet.details.accrued.vacation.0.compensateDays|default('') }}" />
+        </div>
+
+        <div class="form-group col-3">
+            <label for="accrued[vacation][0][compensateAmount]">Monto Días Inactivo</label>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">$</span>
+                </div>
+                <input name="accrued[vacation][0][compensateAmount]" class="form-control accrued" type="text" value="{{ paysheet.details.accrued.vacation.0.compensateAmount|default('') }}" />
+            </div>
+        </div>
+    </div>
 </div>
