--- a/templates/paysheet/__paysheet_accrued_basic.html.twig
+++ b/templates/paysheet/__paysheet_accrued_basic.html.twig
@@ -12,12 +12,7 @@
 
 <div id="accruedBasicData" class="collapse show card-body">
     <div class="form-row">
-        <div class="form-group col-4">
-            <label for="accrued[basic][0][paidAt]">Fecha de Pago</label>
-            <input name="accrued[basic][0][paidAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" required value="{{ paysheet.details.accrued.basic.0.paidAt|default('') ? paysheet.details.accrued.basic.0.paidAt|date('Y-m-d', app.user.timezone) : '' }}" />
-        </div>
-
-        <div class="form-group col-4">
+        <div class="form-group col-3">
             <label for="accrued[basic][0][days]">Días Trabajados</label>
             <input name="accrued[basic][0][days]" class="form-control" type="text" required value="{{ paysheet.details.accrued.basic.0.days|default('') }}" />
         </div>
@@ -31,5 +26,39 @@
                 <input name="accrued[basic][0][amount]" class="form-control accrued" type="text" required value="{{ paysheet.details.accrued.basic.0.amount|default('') }}" />
             </div>
         </div>
+
+        <div class="form-group col-1">
+            <label for="">&nbsp;</label>
+            <button class="addPaidAt btn btn-sm btn-link" type="button">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+            </button>
+        </div>
+
+        {% set paidAt = '' %}
+
+        {% if not isNewPaysheet and paysheet.details.accrued.basic.0.paidAt.0|default('') is empty %}
+        {% set paidAt = paysheet.details.accrued.basic.0.paidAt %}
+        {% endif %}
+
+        <div class="paidAt form-group col-4">
+            <label for="accrued[basic][0][paidAt][0]">Fecha de Pago</label>
+            <input name="accrued[basic][0][paidAt][0]" data-zdp_show_icon="false" class="form-control date-picker" type="text" required value="{{ paysheet.details.accrued.basic.0.paidAt.0|default('') ? paysheet.details.accrued.basic.0.paidAt.0|date('Y-m-d') : paidAt }}" />
+        </div>
+
+        {% if paysheet.details.accrued.basic.0.paidAt|length > 1 %}
+            {% for index,paidAt in paysheet.details.accrued.basic.0.paidAt|slice(1, paysheet.details.accrued.basic.0.paidAt|length) %}
+                <div class="form-group col-1 offset-7">
+                    <label for="">&nbsp;</label>
+                    <button class="subPaidAt btn btn-sm btn-outline-danger" data-id="{{ index + 1 }}" type="button">
+                        <i class="fa fa-minus" aria-hidden="true"></i>
+                    </button>
+                </div>
+
+                <div class="paidAt form-group col-4" data-id="{{ index + 1 }}">
+                    <label for="accrued[basic][0][paidAt][{{ index + 1 }}]">Fecha de Pago</label>
+                    <input name="accrued[basic][0][paidAt][{{ index + 1 }}]" data-zdp_show_icon="false" class="form-control date-picker" type="text" value="{{ paidAt }}" />
+                </div>
+            {% endfor %}
+        {% endif %}
     </div>
 </div>
