--- a/templates/paysheet/__paysheet_agreement.html.twig
+++ b/templates/paysheet/__paysheet_agreement.html.twig
@@ -78,7 +78,7 @@
 
         <div class="form-group col-md-4">
             <label for="agreement[finishAt]" class="col-form-label">{% trans from 'agreement' %}label.finishAt{% endtrans %}</label>
-            <input name="agreement[finishAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" required />
+            <input name="agreement[finishAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" />
         </div>
 
         <div class="form-group col-md-4">
