Updated paysheet form: set percentage as number, set min max restrictions

--- a/templates/paysheet/__paysheet_accrued_cessation.html.twig
+++ b/templates/paysheet/__paysheet_accrued_cessation.html.twig
@@ -38,7 +38,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">%</span>
                 </div>
-                <input name="accrued[cessation][0][percentage]" class="form-control accrued" type="text" value="{{ paysheet.details.accrued.cessation.0.percentage|default('') }}" />
+                <input name="accrued[cessation][0][percentage]" class="form-control accrued" type="numbe" min="0" max="100" value="{{ paysheet.details.accrued.cessation.0.percentage|default('') }}" />
             </div>
         </div>
 
