--- a/templates/paysheet/__paysheet_accrued_basic.html.twig
+++ b/templates/paysheet/__paysheet_accrued_basic.html.twig
@@ -27,9 +27,8 @@
             </div>
         </div>
 
-        <div class="form-group col-1">
-            <label for="">&nbsp;</label>
-            <button class="addPaidAt btn btn-sm btn-link" type="button">
+        <div class="form-group col-1 text-center pt-4">
+            <button class="addPaidAt btn btn-sm btn-outline-info" type="button">
                 <i class="fa fa-plus" aria-hidden="true"></i>
             </button>
         </div>
@@ -47,8 +46,7 @@
 
         {% if paysheet.details and paysheet.details.accrued.basic.0.paidAt|length > 1 %}
             {% for index,paidAt in paysheet.details.accrued.basic.0.paidAt|slice(1, paysheet.details.accrued.basic.0.paidAt|length) %}
-                <div class="form-group col-1 offset-7">
-                    <label for="">&nbsp;</label>
+                <div class="form-group col-1 offset-7 text-center pt-4">
                     <button class="subPaidAt btn btn-sm btn-outline-danger" data-id="{{ index + 1 }}" type="button">
                         <i class="fa fa-minus" aria-hidden="true"></i>
                     </button>
