--- a/templates/employee/index.html.twig
+++ b/templates/employee/index.html.twig
@@ -21,17 +21,9 @@
                 <thead>
                     <tr>
                         <th scope="col">{% trans %}label.id{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.documentTypeId{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.documentNumber{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.firstName{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.secondName{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.firstSurname{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.secondSurname{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.type{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.subType{% endtrans %}</th>
+                        <th scope="col">{% trans %}entity{% endtrans %}</th>
+                        <th scope="col">{% trans %}label.type{% endtrans %}/{% trans %}label.subType{% endtrans %}</th>
                         <th scope="col">{% trans %}label.paymentMethod{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.accountType{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.accountNumber{% endtrans %}</th>
                         <th scope="col">{% trans %}label.isActive{% endtrans %}</th>
                         <th scope="col" class="text-center" style="width: 105px;"><i class="fa fa-cogs" aria-hidden="true"></i></th>
                     </tr>
