--- a/templates/agreement/index.html.twig
+++ b/templates/agreement/index.html.twig
@@ -24,11 +24,8 @@
                         <th scope="col">{% trans %}label.name{% endtrans %}</th>
                         <th scope="col">{% trans %}label.employee{% endtrans %}</th>
                         <th scope="col">{% trans %}label.type{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.period{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.currency{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.salary{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.healthPercentage{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.pensionPercentage{% endtrans %}</th>
+                        {# <th scope="col">{% trans %}label.healthPercentage{% endtrans %}</th> #}
+                        {# <th scope="col">{% trans %}label.pensionPercentage{% endtrans %}</th> #}
                         <th scope="col">{% trans %}label.integralSalary{% endtrans %}</th>
                         <th scope="col">{% trans %}label.highRisk{% endtrans %}</th>
                         <th scope="col">{% trans %}label.initAt{% endtrans %}</th>
