--- a/templates/payroll/index.html.twig
+++ b/templates/payroll/index.html.twig
@@ -22,7 +22,7 @@
                     <tr>
                         <th scope="col">{% trans %}label.id{% endtrans %}</th>
                         <th scope="col">{% trans %}label.numeration{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.employee{% endtrans %}</th>
+                        <th scope="col">{% trans %}label.paysheet{% endtrans %}</th>
                         <th scope="col">{% trans %}label.provider{% endtrans %}</th>
                         <th scope="col">{% trans %}label.status{% endtrans %}</th>
                         <th scope="col">{% trans %}label.type{% endtrans %}</th>
