--- a/templates/paysheet/__paysheet_accrued_vacation.html.twig
+++ b/templates/paysheet/__paysheet_accrued_vacation.html.twig
@@ -10,8 +10,23 @@
     </div>
 </div>
 
-<div id="accruedVacationData" class="collapse {{ paysheet.details.accrued.vacation.0.initAt|default('') ? 'show' : 'hide' }} card-body">
+<div id="accruedVacationData" class="collapse {{ paysheet.details.accrued.vacation.0.days|default('') or paysheet.details.accrued.vacation.0.compensateDays|default('') ? 'show' : 'hide' }} card-body">
     <div class="form-row">
+        <div class="form-group col-3">
+            <label for="accrued[vacation][0][days]">Días Comunes</label>
+            <input name="accrued[vacation][0][days]" class="form-control" type="text" value="{{ paysheet.details.accrued.vacation.0.days|default('') }}" />
+        </div>
+
+        <div class="form-group col-3">
+            <label for="accrued[vacation][0][amount]">Monto Días Comunes</label>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">$</span>
+                </div>
+                <input name="accrued[vacation][0][amount]" class="form-control accrued" type="text" value="{{ paysheet.details.accrued.vacation.0.amount|default('') }}" />
+            </div>
+        </div>
+
         <div class="form-group col-3">
             <label for="accrued[vacation][0][initAt]">Fecha de Inicio</label>
             <input name="accrued[vacation][0][initAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" value="{{ paysheet.details.accrued.vacation.0.initAt|default('') ? paysheet.details.accrued.vacation.0.initAt|date('Y-m-d', app.user.timezone) : '' }}" />
@@ -21,34 +36,18 @@
             <label for="accrued[vacation][0][finishAt]">Fecha de Fin</label>
             <input name="accrued[vacation][0][finishAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" value="{{ paysheet.details.accrued.vacation.0.finishAt|default('') ? paysheet.details.accrued.vacation.0.finishAt|date('Y-m-d', app.user.timezone) : '' }}" />
         </div>
-
-        <div class="form-group col-3">
-            <label for="accrued[vacation][0][days]">Días</label>
-            <input name="accrued[vacation][0][days]" class="form-control" type="text" value="{{ paysheet.details.accrued.vacation.0.days|default('') }}" />
-        </div>
-
-        <div class="form-group col-3">
-            <label for="accrued[vacation][0][amount]">Monto</label>
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">$</span>
-                </div>
-                <input name="accrued[vacation][0][amount]" class="form-control accrued" type="text" value="{{ paysheet.details.accrued.vacation.0.amount|default('') }}" />
-            </div>
-        </div>
     </div>
 
-    <div class="form-row">
-        <div class="form-group col-6">
-        </div>
+    <hr />
 
+    <div class="form-row">
         <div class="form-group col-3">
-            <label for="accrued[vacation][0][compensateDays]">Días Inactivo</label>
+            <label for="accrued[vacation][0][compensateDays]">Días Compensados</label>
             <input name="accrued[vacation][0][compensateDays]" class="form-control" type="text" value="{{ paysheet.details.accrued.vacation.0.compensateDays|default('') }}" />
         </div>
 
         <div class="form-group col-3">
-            <label for="accrued[vacation][0][compensateAmount]">Monto Días Inactivo</label>
+            <label for="accrued[vacation][0][compensateAmount]">Monto Días Compensados</label>
             <div class="input-group">
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
